Attempt at fixing some weird Path related error